--- a/templates/alumni.html
+++ b/templates/alumni.html
@@ -5,7 +5,7 @@
 
 		{% for alumnus in alumni %}
 			{% if (loop.index-1) is divisibleby 6 %}
-				<div class="row-fluid current_members-row">
+				<div class="row-fluid people-row">
             {% endif %}
 
             <div class="span2">
