--- a/templates/current_members.html
+++ b/templates/current_members.html
@@ -5,7 +5,7 @@
 
         {% for current_member in current_members %}
             {% if (loop.index-1) is divisibleby 6 %}
-                <div class="row-fluid current_members-row">
+                <div class="row-fluid people-row">
             {% endif %}
 
             <div class="span2">
