--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <div class="span7 content bgimage">
-    	<h1>Welcome!</h1>
+    	<h1 class="text-center">Welcome!</h1>
     	<p>PowerChords, founded in 2007, hail from Olin College of Engineering in Needham, MA where they comprise five percent of the student body. With ALL members being engineering majors, PowerChords are inherently geeky... from their “flower chord” boutonnieres to signature arrangements like Baba Yetu (from Civ IV) and Dr. Horrible Medley.</p>
 	</div>
     <div class="span3 news">
