--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="span7 content bgimage">
     	<h1 class="text-center">Welcome!</h1>
-    	<p>PowerChords, founded in 2007, hail from Olin College of Engineering in Needham, MA where they comprise five percent of the student body. With ALL members being engineering majors, PowerChords are inherently geeky... from their “flower chord” boutonnieres to signature arrangements like Baba Yetu (from Civ IV) and Dr. Horrible Medley.</p>
+    	<p>Sporting their characteristic  “flowerchords” since 2007, PowerChords is the oldest a cappella group at Olin College of Engineering. Despite their wide range of interests, they have found unity in all styles of a cappella through powerful arrangement style and electric enthusiasm during performances.</p>
 	</div>
     <div class="span3 news">
         <h3>Recent News</h3>
