--- a/templates/merch.html
+++ b/templates/merch.html
@@ -3,27 +3,15 @@
 	<div class="span10 content">
         <h1>Power Paraphernalia</h1>
 
-PowerChords's CDs are now available on from the Olin online gear store!
 
-<br></br>
-
-<a href="http://olingear.olin.edu/powerchordslivestudioalbumelevatorpitchcd.aspx">Elevator Pitch, our newest EP! <i>(2015)</i></a> - $10.00
-<br></br>
-<img src="static/images/merch/ElevatorPitchCover.jpg" width="350"/>
-<br></br>
-
-<a href="http://olingear.olin.edu/powerchordslivestudioalbumshamelessplugcd.aspx">Shameless Plug <i>(2012)</i></a> - $10.00
-
-<br></br>
-<img src="static/images/merch/ShamelessPlugCover2_smaller.jpg" width="250"/>
-<img src="static/images/merch/ShamelessPlugDetails_smaller.jpg" width="250"/>
-<br></br>
-
+Email us at <a href="mailto:olinpowerchords@gmail.com">olinpowerchords@gmail.com</a> if you'd like to place an order! We will ship to you (standard shipping rates apply).
+<br/><br/>
 PowerChords T-shirt - $15.00 <br/><br/>
-Email us at <a href="mailto:olinpowerchords@gmail.com">olinpowerchords@gmail.com</a> if you'd like to place an order for a T-shirt
-<br></br>
 <img src="static/images/merch/pctshirt.jpg" width="350"/>
 <br/><br/>
+Shameless Plug, our new CD! - $15.00 <br/><br/>
+<img src="static/images/merch/ShamelessPlugCover2.jpg" width="250"/>
+<img src="static/images/merch/ShamelessPlugDetails.jpg" width="250"/>
 
 </div>
 {% endblock %}
