--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="span7 content bgimage">
     	<h1 class="text-center">Welcome!</h1>
-    	<p>Sporting their characteristic  “flowerchords” since 2007, PowerChords is the oldest a cappella group at Olin College of Engineering. Despite their wide range of interests, they have found unity in all styles of a cappella through powerful arrangement style and electric enthusiasm during performances.</p>
+    	<p>Sporting their characteristic  “flowerchords” since 2007, PowerChords is the oldest a cappella group at Olin College of Engineering. Within their wide range of interests, they have found unity in all styles of a cappella through powerful arrangement style and electric enthusiasm during performances.</p>
 	</div>
     <div class="span3 news">
         <h3>Recent News</h3>
